# synap-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  pyproject.toml  stubs.sh
.github/workflows/aarch64/: pip-build-manual.yml  pip-build-release.yml
cmake/: FindPybind11.cmake  aarch64-linux-gnu.python_config.cmake  aarch64-linux-gnu.toolchain.cmake
examples/: synap_cli_ic.py  synap_cli_od.py
src/: export.cpp  export_postprocessor.cpp  export_preprocessor.cpp  export_tensor.cpp  export_types.cpp
src/synap/: __init__.py  __init__.pyi
src/synap/postprocessor/: __init__.py  __init__.pyi
src/synap/preprocessor/: __init__.py  __init__.pyi
src/synap/types/: __init__.py  __init__.pyi
tests/: requirements.txt  test_tensor.py  test_types.py  utils.py
tests/data/: sample_results.json  yolov8s-640x384.yaml
